--- a/index.html
+++ b/index.html
@@ -6,8 +6,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboart</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+sharp"
+      rel="stylesheet">
 </head>
 <body>
-    
+    <div class="container">
+        <aside>
+           <div class="top">
+                <div class="logo">
+                    <img src="./images/logo.png" alt="logo">
+                    <h2>EGA<span class="danger">TOR</span></h2>
+                    <div class="close" id="close-btn">
+                        <img class="close-icon" src="./icons/close.svg" alt="close">
+                    </div>
+                </div>
+           </div>
+
+           <div class="sidebar">
+            <a href="#">
+                <img class="dashboart-icon" src="./icons/dashboart.svg" alt=" dashboart">
+                <h3>Dashboart</h3>
+            </a>
+            <a href="#">
+                <img class="dashboart-icon" src="./icons/person.svg" alt="customers">
+                <h3>Customers</h3>
+            </a>
+            <a href="#">
+                <img class="dashboart-icon" src="./icons/orders.svg" alt="orders">
+                <h3>Orders</h3>
+            </a>
+            <a href="#">
+                <img class="dashboart-icon" src="./icons/analitc.svg" alt="analitc">
+                <h3>Analilytics</h3>
+            </a>
+            <a href="#">
+                <img class="dashboart-icon" src="./icons/chat.svg" alt="message">
+                <h3>Message</h3>
+            </a>
+            <a href="#">
+                <img class="dashboart-icon" src="./icons/product.svg" alt="product">
+                <h3>Product</h3>
+            </a>
+            <a href="#">
+                <img class="dashboart-icon" src="./icons/report.svg" alt="report">
+                <h3>Reports</h3>
+            </a>
+            <a href="#">
+                <img class="dashboart-icon" src="./icons/settings.svg" alt="Settings">
+                <h3>Settings</h3>
+            </a>
+            <a href="#">
+                <img class="dashboart-icon" src="./icons/add.svg" alt="add">
+                <h3>Add product</h3>
+            </a>
+           </div>
+        </aside>
+    </div>
 </body>
 </html>
