--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboart</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/normalize.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+sharp"
       rel="stylesheet">
 </head>
@@ -42,6 +43,7 @@
             <a href="#">
                 <img class="dashboart-icon" src="./icons/chat.svg" alt="message">
                 <h3>Message</h3>
+                <span class="message-count">20</span>
             </a>
             <a href="#">
                 <img class="dashboart-icon" src="./icons/product.svg" alt="product">
