--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <div class="logo">
                     <img src="./images/logo.png" alt="logo">
                     <h2>EGA<span class="danger">TOR</span></h2>
-                    <div class="close" id="close-btn">
-                        <img class="close-icon" src="./icons/close.svg" alt="close">
-                    </div>
+                </div>
+                <div class="close" id="close-btn">
+                    <img class="close-icon" src="./icons/close.svg" alt="close">
                 </div>
            </div>
 
@@ -28,7 +28,7 @@
                 <img class="dashboart-icon" src="./icons/dashboart.svg" alt=" dashboart">
                 <h3>Dashboart</h3>
             </a>
-            <a href="#">
+            <a class="active" href="#">
                 <img class="dashboart-icon" src="./icons/person.svg" alt="customers">
                 <h3>Customers</h3>
             </a>
@@ -60,6 +60,10 @@
             <a href="#">
                 <img class="dashboart-icon" src="./icons/add.svg" alt="add">
                 <h3>Add product</h3>
+            </a>
+            <a href="#">
+                <img class="dashboart-icon" src="./icons/logout.svg" alt="logo">
+                <h3>Lodout</h3>
             </a>
            </div>
         </aside>
