yopiladigan qilib ko'rdim

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        <aside>
+        <aside id="aside">
            <div class="top">
                 <div class="logo">
                     <img src="./images/logo.png" alt="logo">
@@ -68,5 +68,12 @@
            </div>
         </aside>
     </div>
+
+
+
+
+
+
+    <script src="./js/index.js"></script>
 </body>
 </html>
