--- a/index.html
+++ b/index.html
@@ -24,49 +24,116 @@
            </div>
 
            <div class="sidebar">
-            <a href="#">
-                <img class="dashboart-icon" src="./icons/dashboart.svg" alt=" dashboart">
-                <h3>Dashboart</h3>
-            </a>
-            <a class="active" href="#">
-                <img class="dashboart-icon" src="./icons/person.svg" alt="customers">
-                <h3>Customers</h3>
-            </a>
-            <a href="#">
-                <img class="dashboart-icon" src="./icons/orders.svg" alt="orders">
-                <h3>Orders</h3>
-            </a>
-            <a href="#">
-                <img class="dashboart-icon" src="./icons/analitc.svg" alt="analitc">
-                <h3>Analilytics</h3>
-            </a>
-            <a href="#">
-                <img class="dashboart-icon" src="./icons/chat.svg" alt="message">
-                <h3>Message</h3>
-                <span class="message-count">20</span>
-            </a>
-            <a href="#">
-                <img class="dashboart-icon" src="./icons/product.svg" alt="product">
-                <h3>Product</h3>
-            </a>
-            <a href="#">
-                <img class="dashboart-icon" src="./icons/report.svg" alt="report">
-                <h3>Reports</h3>
-            </a>
-            <a href="#">
-                <img class="dashboart-icon" src="./icons/settings.svg" alt="Settings">
-                <h3>Settings</h3>
-            </a>
-            <a href="#">
-                <img class="dashboart-icon" src="./icons/add.svg" alt="add">
-                <h3>Add product</h3>
-            </a>
-            <a href="#">
-                <img class="dashboart-icon" src="./icons/logout.svg" alt="logo">
-                <h3>Lodout</h3>
-            </a>
+                <a href="#">
+                    <img class="dashboart-icon" src="./icons/dashboart.svg" alt=" dashboart">
+                    <h3>Dashboart</h3>
+                </a>
+                <a class="active" href="#">
+                    <img class="dashboart-icon" src="./icons/person.svg" alt="customers">
+                    <h3>Customers</h3>
+                </a>
+                <a href="#">
+                    <img class="dashboart-icon" src="./icons/orders.svg" alt="orders">
+                    <h3>Orders</h3>
+                </a>
+                <a href="#">
+                    <img class="dashboart-icon" src="./icons/analitc.svg" alt="analitc">
+                    <h3>Analilytics</h3>
+                </a>
+                <a href="#">
+                    <img class="dashboart-icon" src="./icons/chat.svg" alt="message">
+                    <h3>Message</h3>
+                    <span class="message-count">20</span>
+                </a>
+                <a href="#">
+                    <img class="dashboart-icon" src="./icons/product.svg" alt="product">
+                    <h3>Product</h3>
+                </a>
+                <a href="#">
+                    <img class="dashboart-icon" src="./icons/report.svg" alt="report">
+                    <h3>Reports</h3>
+                </a>
+                <a href="#">
+                    <img class="dashboart-icon" src="./icons/settings.svg" alt="Settings">
+                    <h3>Settings</h3>
+                </a>
+                <a href="#">
+                    <img class="dashboart-icon" src="./icons/add.svg" alt="add">
+                    <h3 class="add-product">Add product</h3>
+                </a>
+                <a href="#">
+                    <img class="dashboart-icon" src="./icons/logout.svg" alt="logo">
+                    <h3>Logout</h3>
+                </a>
            </div>
         </aside>
+        <!------------------ AND Of ASIDE ---------------------->
+        <main>
+            <h1>Dashboart</h1>
+            <div class="date">
+                <input type="date">
+            </div>
+            <div class="insights"> <!--tushuncha class nomi-->
+                <div class="sales"><!--Sotish-->
+                    <img src="./icons/analytics.svg" alt="analitcs">
+                    <div class="middle">
+                        <div class="left">
+                            <h3>Total sales</h3>
+                            <h1>$25,04</h1>
+                        </div>
+                        <div class="progress">
+                            <svg>
+                                <circle cx="38" cy="38" r="36"></circle>
+                            </svg>
+                            <div class="number">
+                                <p>81%</p>
+                            </div>
+                        </div>
+                    </div>
+                    <small class="text-muted">Last 24 Hours</small>
+                </div>
+                <!--=====AND OF SALES=======-->
+                <div class="income"><!--daromad-->
+                    <img src="./icons/bar chart.svg" alt="analitcs">
+                    <div class="middle">
+                        <div class="left">
+                            <h3>Total expenses</h3>
+                            <h1>$14,04</h1>
+                        </div>
+                        <div class="progress">
+                            <svg>
+                                <circle cx="38" cy="38" r="36"></circle>
+                            </svg>
+                            <div class="number">
+                                <p>67%</p>
+                            </div>
+                        </div>
+                    </div>
+                    <small class="text-muted">Last 24 Hours</small>
+                </div>
+                <!--=====AND OF SALES=======-->
+                <div class="sales"><!--Sotish-->
+                    <img src="./icons/line-chart.svg" alt="analitcs">
+                    <div class="middle">
+                        <div class="left">
+                            <h3>Total income</h3>
+                            <h1>$10,80</h1>
+                        </div>
+                        <div class="progress">
+                            <svg>
+                                <circle cx="38" cy="38" r="36"></circle>
+                            </svg>
+                            <div class="number">
+                                <p>44%</p>
+                            </div>
+                        </div>
+                    </div>
+                    <small class="text-muted">Last 24 Hours</small>
+                </div>
+                <!--=====AND OF EXPENSES-xarajatlar=======-->
+                
+            </div>
+        </main>
     </div>
 
 
