create stils main

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <small class="text-muted">Last 24 Hours</small>
                 </div>
                 <!--=====AND OF SALES=======-->
-                <div class="income"><!--daromad-->
+                <div class="expenses"><!--daromad-->
                     <img src="./icons/bar chart.svg" alt="analitcs">
                     <div class="middle">
                         <div class="left">
@@ -112,7 +112,7 @@
                     <small class="text-muted">Last 24 Hours</small>
                 </div>
                 <!--=====AND OF SALES=======-->
-                <div class="sales"><!--Sotish-->
+                <div class="income"><!--Sotish-->
                     <img src="./icons/line-chart.svg" alt="analitcs">
                     <div class="middle">
                         <div class="left">
