--- a/index.html
+++ b/index.html
@@ -131,7 +131,29 @@
                     <small class="text-muted">Last 24 Hours</small>
                 </div>
                 <!--=====AND OF EXPENSES-xarajatlar=======-->
-                
+            </div>
+            <div class="recent-order"> <!--oxirgi buyurtma-->
+                <h2>Recent orders</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Product name</th>
+                            <th>Product number</th>
+                            <th>Payment</th>
+                            <th>Status</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Foldable  Mini  Drone</td>
+                            <td>45668</td>
+                            <td>Due</td>
+                            <td class="warning">Pending</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <a href="#">Show All</a>
             </div>
         </main>
     </div>
