--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
                             <td>45668</td>
                             <td>Due</td>
                             <td class="warning">Pending</td>
+                            <td class="primary">Details</td>
                         </tr>
                     </tbody>
                 </table>
