end recenr-orders

--- a/index.html
+++ b/index.html
@@ -151,6 +151,34 @@
                             <td>Due</td>
                             <td class="warning">Pending</td>
                             <td class="primary">Details</td>
+                         </tr>
+                        <tr>
+                            <td>Foldable  Mini  Drone</td>
+                            <td>45668</td>
+                            <td>Due</td>
+                            <td class="warning">Pending</td>
+                            <td class="primary">Details</td>
+                        </tr>
+                        <tr>
+                            <td>Foldable  Mini  Drone</td>
+                            <td>45668</td>
+                            <td>Due</td>
+                            <td class="warning">Pending</td>
+                            <td class="primary">Details</td>
+                        </tr>
+                        <tr>
+                            <td>Foldable  Mini  Drone</td>
+                            <td>45668</td>
+                            <td>Due</td>
+                            <td class="warning">Pending</td>
+                            <td class="primary">Details</td>
+                        </tr>
+                        <tr>
+                            <td>Foldable  Mini  Drone</td>
+                            <td>45668</td>
+                            <td>Due</td>
+                            <td class="warning">Pending</td>
+                            <td class="primary">Details</td>
                         </tr>
                     </tbody>
                 </table>
@@ -158,12 +186,7 @@
             </div>
         </main>
     </div>
-
-
-
-
-
-
+    
     <script src="./js/index.js"></script>
 </body>
 </html>
