--- a/index.html
+++ b/index.html
@@ -185,8 +185,29 @@
                 <a href="#">Show All</a>
             </div>
         </main>
+        <!-- ========END OF MAIN======= -->
+        <div class="right">
+            <div class="top">
+                <button id="menu-btn">
+                    <img src="./icons/menu.svg" alt="menu-icon">
+                </button>
+                <div class="theme-togler">
+                    <img src="./icons/sun.svg" alt="sun-icon">
+                    <img src="./icons/moon.svg" alt="moon-icon">
+                </div>
+                <div class="profile">
+                    <div class="info">
+                        <p>U, <b>Mengnorov</b></p>
+                        <small class="text-muted">Admin</small>
+                    </div>
+                    <div class="profile-photo">
+                        <img src="./images/photo_20.jpg" alt="profil-photo">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    
+
     <script src="./js/index.js"></script>
 </body>
 </html>
