recent-updates create html

--- a/index.html
+++ b/index.html
@@ -205,6 +205,36 @@
                     </div>
                 </div>
             </div>
+            <!-- END OF TOP -->
+            <div class="recent-updates">
+                <h2>Recent updates</h2>
+                <div class="updates">
+                    <div class="update">
+                        <div class="profil-photo">
+                            <img src="./images/profile-2.jpg" alt="photo">
+                        </div>
+                        <div class="message">
+                            <p><b>Jorj Washington</b> receiver his order of Night lion tech GPS drone.</p>
+                        </div>
+                <div class="updates">
+                    <div class="update">
+                        <div class="profil-photo">
+                            <img src="./images/profile-3.jpg" alt="photo">
+                        </div>
+                        <div class="message">
+                            <p><b>Jorj Washington</b> receiver his order of Night lion tech GPS drone.</p>
+                        </div>
+                <div class="updates">
+                    <div class="update">
+                        <div class="profil-photo">
+                            <img src="./images/profile-4.jpg" alt="photo">
+                        </div>
+                        <div class="message">
+                            <p><b>Jorj Washington</b> receiver his order of Night lion tech GPS drone.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
