--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         <small class="text-muted">Admin</small>
                     </div>
                     <div class="profile-photo">
-                        <img src="./images/photo_20.jpg" alt="profil-photo">
+                        <img class="admin" src="./images/photo_20.jpg" alt="profil-photo" width="40" height="40">
                     </div>
                 </div>
             </div>
@@ -211,7 +211,7 @@
                 <div class="updates">
                     <div class="update">
                         <div class="profil-photo">
-                            <img src="./images/profile-2.jpg" alt="photo">
+                            <img src="./images/profile-2.jpg" alt="photo" >
                         </div>
                         <div class="message">
                             <p><b>Jorj Washington</b> receiver his order of Night lion tech GPS drone.</p>
