end of recent-updates

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         <small class="text-muted">Admin</small>
                     </div>
                     <div class="profile-photo">
-                        <img class="admin" src="./images/photo_20.jpg" alt="profil-photo" width="40" height="40">
+                        <img class="admin" src="./images/photo_20.jpg" alt="profil-photo">
                     </div>
                 </div>
             </div>
@@ -211,12 +211,12 @@
                 <div class="updates">
                     <div class="update">
                         <div class="profil-photo">
-                            <img src="./images/profile-2.jpg" alt="photo" >
+                            <img src="./images/profile-2.jpg" alt="photo">
                         </div>
                         <div class="message">
                             <p><b>Jorj Washington</b> receiver his order of Night lion tech GPS drone.</p>
                         </div>
-                <div class="updates">
+                    </div>
                     <div class="update">
                         <div class="profil-photo">
                             <img src="./images/profile-3.jpg" alt="photo">
@@ -224,7 +224,7 @@
                         <div class="message">
                             <p><b>Jorj Washington</b> receiver his order of Night lion tech GPS drone.</p>
                         </div>
-                <div class="updates">
+                    </div>
                     <div class="update">
                         <div class="profil-photo">
                             <img src="./images/profile-4.jpg" alt="photo">
