--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                             <img src="./images/profile-3.jpg" alt="photo">
                         </div>
                         <div class="message">
-                            <p><b>Jorj Washington</b> receiver his order of Night lion tech GPS drone.</p>
+                            <p><b>Anjelika Joli</b> receiver his order of Night lion tech GPS drone.</p>
                         </div>
                     </div>
                     <div class="update">
@@ -230,8 +230,57 @@
                             <img src="./images/profile-4.jpg" alt="photo">
                         </div>
                         <div class="message">
-                            <p><b>Jorj Washington</b> receiver his order of Night lion tech GPS drone.</p>
+                            <p><b>Selena Gomes</b> receiver his order of Night lion tech GPS drone.</p>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <!-- END OF RECENT UPDATES -->
+            <div class="sales-analytics">
+                <h2>Sales analytics</h2>
+                <div class="item online">
+                   <div class="icon">
+                         <img src="./icons/shopping_cart.svg" alt="shopping_cart">
+                    </div>
+                   <div class="right">
+                      <div class="info">
+                        <h3>ONLINE ORDERS</h3>
+                        <small class="text-muted">Last 24 hours</small>
+                      </div>
+                      <h5 class="succes">+39%</h5>
+                      <h3>4322</h3>
+                   </div>
+                </div>  
+                <div class="item offline">
+                   <div class="icon">
+                         <img src="./icons/local_mall.svg" alt="local_mall">
+                    </div>
+                   <div class="right">
+                      <div class="info">
+                        <h3>OFFLINE ORDERS</h3>
+                        <small class="text-muted">Last 24 hours</small>
+                      </div>
+                      <h5 class="danger">-10%</h5>
+                      <h3>1200</h3>
+                   </div>
+                </div>  
+                <div class="item customers">
+                   <div class="icon">
+                         <img src="./icons/person.svg" alt="shopping_cart">
+                    </div>
+                   <div class="right">
+                      <div class="info">
+                        <h3>NEW CUSTOMERS</h3>
+                        <small class="text-muted">Last 24 hours</small>
+                      </div>
+                      <h5 class="succes">+22%</h5>
+                      <h3>901</h3>
+                   </div>
+                </div>  
+                <div class="item add-product">
+                    <div>
+                        <img src="./icons/add.svg" alt="add">
+                        <h3>add product</h3>
                     </div>
                 </div>
             </div>
