--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <aside id="aside">
            <div class="top">
                 <div class="logo">
-                    <img src="./images/logo.png" alt="logo">
+                    <img src="./images/logo.png" alt="logo" >
                     <h2>EGA<span class="danger">TOR</span></h2>
                 </div>
                 <div class="close" id="close-btn">
@@ -201,7 +201,7 @@
                         <small class="text-muted">Admin</small>
                     </div>
                     <div class="profile-photo">
-                        <img class="admin" src="./images/photo_20.jpg" alt="profil-photo">
+                        <img class="admin" src="./images/photo_20.jpg" alt="profil-photo" width="44" height="44">
                     </div>
                 </div>
             </div>
